clusters/home/media/app/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8096
