clusters/home/media/app/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: gw-media
      sectionName: https
  hostnames:
    - jellyfin.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
